maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:88: error: not found: value lDir
  lDir = Array(Direction.NORD,Direction.SUD,Direction.EST,Direction.OUEST)
  ^ShortestPathMaze:90: error: not found: value lDir
  setDirection(lDir(3))
               ^ShortestPathMaze:92: error: not found: value bonneDir
    bonneDir = lDir(3)
    ^ShortestPathMaze:96: error: not found: value lDir
  setDirection(lDir(2))
               ^ShortestPathMaze:98: error: not found: value lDir
    dir = lDir(2)
          ^ShortestPathMaze:102: error: not found: value lDir
  setDirection((lDir(0)))
                ^ShortestPathMaze:104: error: not found: value lDir
    dir = lDir(0)
          ^ShortestPathMaze:108: error: not found: value lDir
  setDirection(lDir(1))
               ^ShortestPathMaze:110: error: not found: value lDir
    dir=lDir(1)
        ^